--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="game-container">
-        <canvas class="game"></canvas>
+        <canvas id="game"></canvas>
         <div class="buttons">
             <button id="up">Arriba</button>
             <button id="left">Izquierda</button>
