--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="messages">
-            <p class="lives">Vidas: </p>
+            <p>Vidas: <span id="lives"></span></p>
             <p class="time">Tiempo: </p>
             <p class="record">Record</p>
         </div>
