Id, al span de tiempo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="messages">
             <p>Vidas: <span id="lives"></span></p>
-            <p class="time">Tiempo: </p>
+            <p>Tiempo: <span id="time"></span></p>
             <p class="record">Record</p>
         </div>
     </div>
