Párrafos para record y mensaje de resultado

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div class="messages">
             <p>Vidas: <span id="lives"></span></p>
             <p>Tiempo: <span id="time"></span></p>
-            <p class="record">Record</p>
+            <p>Record: <span id="record"></span></p>
+            <p id="result"></p>
         </div>
     </div>
 
