--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <title>Videogame</title>
 </head>
 <body>
-    <div class="game-container">
+    <div class="back-elements first"></div>
+    <div class="back-elements second"></div>
+    <div class="back-elements thrid"></div>
+    <div class="back-elements fourth"></div>
+    <div class="back-elements fifth"></div>
+    <div class="game-container sixth">
         <canvas id="game"></canvas>
         <div class="buttons">
             <button id="up">Arriba</button>
@@ -18,11 +23,15 @@
             <button id="right">Derecha</button>
             <button id="down">Abajo</button>
         </div>
+        <div class="star-restart">
+            <button id="start">Iniciar</button>
+           <button id="restart">Reiniciar</butto>
+        </div>
 
         <div class="messages">
             <p>Vidas: <span id="lives"></span></p>
-            <p>Tiempo: <span id="time"></span></p>
-            <p>Record: <span id="record"></span></p>
+            <p>Tiempo⏱: <span id="time"></span></p>
+            <p>Record 🏁: <span id="record"></span></p>
             <p id="result"></p>
         </div>
     </div>
